解决国际站不能使用的问题

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-leetcode-problem-rating",
     "displayName": "LeetCode",
     "description": "%main.description%",
-    "version": "3.1.20",
+    "version": "3.1.21",
     "author": "ccagml",
     "publisher": "ccagml",
     "license": "MIT",
@@ -1200,6 +1200,7 @@
     "dependencies": {
         "ansi-styles": "3.2.1",
         "cheerio": "1.0.0-rc.12",
+        "fetch-h2": "^3.0.2",
         "fs-extra": "^10.0.0",
         "he": "1.2.0",
         "highlight.js": "^10.7.2",
@@ -1209,6 +1210,7 @@
         "mkdirp": "^1.0.4",
         "moment": "^2.29.1",
         "nconf": "^0.11.2",
+        "parse-curl": "^0.2.6",
         "prompt": "^1.2.0",
         "request": "2.88.0",
         "underscore": "1.12.1",
